# imdb-semantic-search

./: .gitignore  1_🏠_Home.py  README.md  index.py  pyproject.toml
data/index/98b40708-3f0a-4469-ac92-3421edbaaa19/: index_metadata.pickle
labs/: data_embedding.ipynb
pages/: 2_📄_Data.py  3_🔍_Search.py
